--- a/css/styles.css
+++ b/css/styles.css
@@ -1,22 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap");
 
-body{
-  font-family: 'Poppins', sans-serif;
+body {
+  font-family: "Poppins", sans-serif;
 }
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-.menu{
+.menu {
   background-color: #1a202c;
   color: #fff;
   height: 70px;
 }
 
-.menu__container{
+.menu__container {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -24,16 +24,15 @@ body{
   max-width: 1200px;
   height: 100%;
   margin: 0 auto;
-
 }
 
-.menu__links{
+.menu__links {
   height: 100%;
   transition: transform 0.5s;
   display: flex;
 }
 
-.menu__item{
+.menu__item {
   list-style: none;
   position: relative;
   height: 100%;
@@ -41,12 +40,12 @@ body{
   --transform: rotate(-90deg);
 }
 
-.menu__item:hover{
+.menu__item:hover {
   --clip: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
   --transform: rotate(0);
 }
 
-.menu__link{
+.menu__link {
   color: #fff;
   text-decoration: none;
   padding: 0 30px;
@@ -55,20 +54,20 @@ body{
   align-items: center;
 }
 
-.menu__link:hover{
+.menu__link:hover {
   background-color: #5e7094;
 }
 
-.menu__arrow{
+.menu__arrow {
   transform: var(--transform);
   transition: transform 0.3s;
   display: block;
   margin-left: 3px;
 }
 
-.menu__nesting{
+.menu__nesting {
   list-style: none;
-  transition: clip-path .3s;
+  transition: clip-path 0.3s;
   clip-path: var(--clip);
   position: absolute;
   right: 0;
@@ -78,15 +77,14 @@ body{
   background-color: #000;
 }
 
-.menu__link--inside{
+.menu__link--inside {
   padding: 30px 100px 30px 20px;
-
 }
-.menu__link--inside:hover{
+.menu__link--inside:hover {
   background-color: #798499;
 }
 
-.menu__hamburger{
+.menu__hamburger {
   height: 100%;
   display: flex;
   align-items: center;
@@ -95,22 +93,31 @@ body{
   display: none;
 }
 
-.menu__img{
+.menu__img {
   display: block;
   width: 36px;
 }
 
-@media (max-width:800px){
-  .menu__hamburger{
+@media (max-width: 800px) {
+  .menu__hamburger {
     display: flex;
   }
 
-  .menu__item{
-    --clip:0;
+  .menu__item {
+    --clip: 0;
     overflow: hidden;
   }
 
-  .menu__links{
+  .menu__item--active{
+    --transform:rotate(0);
+    --background: #5e7094;
+  }
+
+  .menu-item--show{
+    background-color: var(--background);
+  }
+
+  .menu__links {
     position: fixed;
     max-width: 400px;
     width: 100%;
@@ -121,32 +128,39 @@ body{
     overflow-y: auto;
     display: grid;
     grid-auto-rows: max-content;
+    transform: translateX(100%);
   }
 
-  .menu__link{
+  .menu__links--show{
+    transform: unset;
+    width: 100%;
+  }
+
+
+
+  .menu__link {
     padding: 25px 0;
     padding-left: 30px;
     height: auto;
   }
 
-  .menu__arrow{
+  .menu__arrow {
     margin-left: auto;
     margin-right: 20px;
   }
 
-  .menu__nesting{
+  .menu__nesting {
     display: grid;
     position: unset;
     width: 100%;
     transform: translateY(0);
     height: 0;
-    transition: height .3s;
+    transition: height 0.3s;
   }
 
-  .menu__link--inside{
+  .menu__link--inside {
     width: 90%;
     margin-left: auto;
     border-left: 1px solid #798499;
   }
-
 }
